infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind : Deployment
metadata :
  name : orders-depl
spec :
  replicas : 1
  selector:
    matchLabels:
      app : orders
  template :
    metadata :
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: us.gcr.io/ticket-dev-340116/orders
          env:
            - name : NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath : metadata.name
            - name : NATS_URL
              value: 'http://nats-srv:4222'
            - name : NATS_CLUSTER_ID
              value : ticketing
            - name : MONGO_URI
              value : 'mongodb://orders-mongo-srv/orders'
            - name : JWt_KEY
              valueFrom :
                secretKeyRef :   
                  name: jwt-secret
                  key: JWt_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec : 
  selector:
    app: orders
  ports :
    - name: orders
      protocol :  TCP
      port: 3000
      targetPort: 3000
