infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind : Deployment
metadata :
  name : payment-depl
spec :
  replicas : 1
  selector:
    matchLabels:
      app : payment
  template :
    metadata :
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: us.gcr.io/ticket-dev-340116/payment
          env:
            - name : NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath : metadata.name
            - name : NATS_URL
              value: 'http://nats-srv:4222'
            - name : NATS_CLUSTER_ID
              value : ticketing
            - name : MONGO_URI
              value : 'mongodb://payment-mongo-srv/payment'
            - name : JWt_KEY
              valueFrom :
                secretKeyRef :   
                  name: jwt-secret
                  key: JWt_KEY
            - name: STRIPE_KEY
              valueFrom:
                secretKeyRef :
                  name :  stripe-secret
                  key: STRIPE_KEY

---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec : 
  selector:
    app: payment
  ports :
    - name: payment
      protocol :  TCP
      port: 3000
      targetPort: 3000
