infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind : Deployment
metadata :
  name : tickets-depl
spec :
  replicas : 1
  selector:
    matchLabels:
      app : tickets
  template :
    metadata :
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: us.gcr.io/ticket-dev-340116/tickets
          env:
            - name : NATS_CLIENT_ID
              valueFrom:
                fieldRef:
                  fieldPath : metadata.name
            - name : NATS_URL
              value: 'http://nats-srv:4222'
            - name : NATS_CLUSTER_ID
              value : ticketing
            - name : MONGO_URI
              value : 'mongodb://tickets-mongo-srv/tickets'
            - name : JWt_KEY
              valueFrom :
                secretKeyRef :   
                  name: jwt-secret
                  key: JWt_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec : 
  selector:
    app: tickets
  ports :
    - name: tickets
      protocol :  TCP
      port: 3000
      targetPort: 3000
